testing implement to symfony project

--- a/src/Resources/views/upload_theme.html.twig
+++ b/src/Resources/views/upload_theme.html.twig
@@ -8,16 +8,16 @@
             {% set enc = get_class(data)|encryp %}
             <p>
                 {% if form.vars.data is images %}
-                    <img src="{{ path('file_download', {q: data.id|encryp, name: form.vars.name|encryp, type: get_class(data)|encryp}) }}" style="max-width: 100px; max-height: 70px"/> <br/>
+                    <img src="{{ path('kmj_file_download', {q: data.id|encryp, name: form.vars.name|encryp, type: get_class(data)|encryp}) }}" style="max-width: 100px; max-height: 70px"/> <br/>
                 {% endif %}
-                <a href="{{ path('file_download', {q: data.id|encryp, name: form.vars.name|encryp, type: get_class(data)|encryp}) }}">{{ form.vars.data }}</a>
+                <a href="{{ path('kmj_file_download', {q: data.id|encryp, name: form.vars.name|encryp, type: get_class(data)|encryp}) }}">{{ form.vars.data }}</a>
             </p>
         {% else %}
             <p>
                 {% if form.vars.data is images %}
-                    <img src="{{ path('direct_download', {filepath: form.vars.data|encryp}) }}" style="max-width: 100px; max-height: 70px"/> <br/>
+                    <img src="{{ path('kmj_direct_download', {filepath: form.vars.data|encryp}) }}" style="max-width: 100px; max-height: 70px"/> <br/>
                 {% endif %}
-                <a href="{{ path('direct_download', {filepath: form.vars.data|encryp}) }}">{{ 'download'|trans }}</a>
+                <a href="{{ path('kmj_direct_download', {filepath: form.vars.data|encryp}) }}">{{ 'download'|trans }}</a>
             </p>
         {% endif %}
     {% endif %}
